bugfix: text in slider is more readable

--- a/src/assets/style/_Slider.scss
+++ b/src/assets/style/_Slider.scss
@@ -22,11 +22,12 @@
         @include flexCenter();
         .img{
           width: 100%;
+          opacity: 0.60;
         }
         .content{
           position: absolute;
           .text{
-            font-size: 32px;
+            font-size: 36px;
             font-weight: bold;
             @include _768{
               font-size: 24px;
